--- a/gradle.properties
+++ b/gradle.properties
@@ -4,14 +4,13 @@ org.gradle.logging.level=info
 
 # Minecraft related
 mod_id=advancedperipherals
-minecraft_version=1.20.1
-neo_version=47.1.99
-loader_version=47
+minecraft_version=1.20.4
+neo_version=20.4.231
+loader_version=20
 mod_version=0.7.40r
 release_type=release
-mappings_channel=official
-#mappings_version=2022.11.27-1.19.2
-mappings_version=1.20.1
+neogradle.subsystems.parchment.minecraftVersion=1.20.4
+neogradle.subsystems.parchment.mappingsVersion=2024.04.14
 jb_annotations=21.0.1
 
 # Test dependencies
@@ -22,7 +21,7 @@ kotlinx_coroutines_version=1.6.0-RC3
 ttoolkit_version=0.1.3
 
 # Mod dependencies
-cc_version=1.110.0
+cc_version=1.110.2
 curios_version=5.2.0+1.20.1
 minecolonies_version=1.20.1-1.1.472-BETA
 appliedenergistics_version=15.0.9-beta
