--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -1,10 +1,7 @@
 name: Build and Test
 
 on:
-  workflow_run:
-    workflows: [Build And Test]
-    types:
-      - completed
+  workflow_dispatch:
   push:
   pull_request_target:
     types:
