Fixed branch of workflow

--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -10,4 +10,4 @@ on:
 
 jobs:
   build-and-test:
-    uses: IntelligenceModding/actions/.github/workflows/build-and-test.yaml@main
+    uses: IntelligenceModding/actions/.github/workflows/build-and-test.yaml@master
