--- a/build.gradle
+++ b/build.gradle
@@ -316,7 +316,7 @@ dependencies {
     compileOnly fg.deobf("com.ldtteam:multipiston:${multipiston_version}")
     compileOnly fg.deobf("com.ldtteam:domum_ornamentum:${domumornamentum_version}:universal")
     compileOnly fg.deobf("com.ldtteam:blockui:${blockui_version}")
-    // IMPORTANT. This should be removed/uncommented when running `runData`
+    // IMPORTANT. This should be removed/commented when running `runData`
     runtimeOnly fg.deobf("com.ldtteam:minecolonies:${minecolonies_version}")
     runtimeOnly fg.deobf("com.ldtteam:structurize:${structurize_version}")
     runtimeOnly fg.deobf("com.ldtteam:multipiston:${multipiston_version}")
