Fixed game tests for `runGameTestClient`

--- a/build.gradle
+++ b/build.gradle
@@ -75,7 +75,6 @@ java.registerFeature("testFixtures") {
     disablePublication()
 }
 
-
 minecraft {
 
     mappings channel: "${mappings_channel}", version: "${mappings_version}"
@@ -152,6 +151,21 @@ minecraft {
         gameTestClient {
             workingDirectory project.file('test-files/client')
             parent runs.client
+
+            def old = lazyTokens["minecraft_classpath"]
+            lazyToken("minecraft_classpath") {
+                // Add all files in testMinecraftLibrary to the classpath.
+                def allFiles = new HashSet<String>();
+
+                def oldVal = old?.get()
+                if (!oldVal != null && !oldVal.isEmpty()) allFiles.addAll(oldVal.split(File.pathSeparatorChar))
+
+                for (file in configurations["testMinecraftLibrary"]) allFiles.add(file.absolutePath)
+
+                println("New classpath $allFiles")
+                allFiles.join(File.pathSeparator)
+            }
+
             property 'forge.logging.markers', 'REGISTRIES'
             property 'forge.logging.console.level', 'debug'
             property 'forge.enabledGameTestNamespaces', 'advancedperipherals,advancedperipheralstest'
@@ -164,12 +178,6 @@ minecraft {
                     source sourceSets.testMod
                     source sourceSets.testFixtures
                 }
-            }
-
-            lazyToken('minecraft_classpath') {
-                (configurations.implementationExtra.copyRecursive().resolve())
-                        .collect { it.absolutePath }
-                        .join(File.pathSeparator)
             }
         }
 
