Created a test using kotlin for the environmental detector. This was just a test, there is a bug loading the structures what I need to fix.

--- a/build.gradle
+++ b/build.gradle
@@ -319,6 +319,10 @@ configurations {
     testFixturesImplementation.extendsFrom(testImplementation)
 }
 
+processTestModResources {
+    duplicatesStrategy = 'exclude'
+}
+
 dependencies {
     // If some of the dependencies are not needed in the dev environment, you can comment the `runtimeOnly` line so it
     // will not be included in the client.
