--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ plugins {
     id 'net.darkhax.curseforgegradle' version '1.1.16'
     id 'org.jetbrains.changelog' version '1.2.1'
     id "com.modrinth.minotaur" version "2.+"
-    id "org.jetbrains.kotlin.jvm" version "1.9.23"
+    id "org.jetbrains.kotlin.jvm" version "${kotlin_version}"
     id 'net.minecraftforge.gradle' version '[6.0.18,6.2)'
     id 'org.parchmentmc.librarian.forgegradle' version '1.+'
     id 'org.spongepowered.mixin' version '0.7.+'
@@ -367,7 +367,7 @@ dependencies {
     compileOnly fg.deobf("curse.maven:ae-additions-493962:${ae2additions_version}")
     //runtimeOnly fg.deobf("curse.maven:ae-additions-493962:${ae2additions_version}")
 
-    implementation fg.deobf("thedarkcolour:kotlinforforge:${kotlinforforge_version}")
+    runtimeOnly fg.deobf("thedarkcolour:kotlinforforge:${kotlinforforge_version}")
 
     // Botania
     compileOnly fg.deobf("vazkii.botania:Botania:${botania_version}")
@@ -408,6 +408,7 @@ dependencies {
     testImplementation "org.junit.jupiter:junit-jupiter-params:${junit_version}"
     testImplementation "org.junit.jupiter:junit-jupiter-engine:${junit_version}"
     testImplementation "net.jqwik:jqwik:${jqwikVersion}"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:${kotlin_coroutines_version}"
     testImplementation "org.hamcrest:hamcrest:${hamcrest_version}"
     testModImplementation sourceSets.main.output
     testModImplementation sourceSets.testFixtures.output
