--- a/gradle.properties
+++ b/gradle.properties
@@ -18,6 +18,8 @@ junit_version=5.10.2
 hamcrest_version=2.2
 ttoolkit_version=0.1.3
 jqwikVersion=1.8.4
+kotlin_version=1.9.23
+kotlin_coroutines_version=1.8.0
 
 # Mod dependencies
 cc_version=1.101.3
