--- a/src/testMod/resources/META-INF/accesstransformer.cfg
+++ b/src/testMod/resources/META-INF/accesstransformer.cfg
@@ -5,3 +5,7 @@ public net.minecraft.gametest.framework.GameTestHelper f_127595_ # testInfo
 
 public net.minecraft.gametest.framework.GameTestSequence f_127774_ # parent
 public net.minecraft.gametest.framework.MultipleTestTracker f_127798_ # tests
+
+public net.minecraft.client.gui.components.ChatComponent f_93760_ # allMessages
+public net.minecraft.client.gui.components.toasts.SystemToast f_94821_ # title
+public net.minecraft.client.gui.components.toasts.SystemToast f_94822_ # messageLines
