--- a/build.gradle
+++ b/build.gradle
@@ -442,6 +442,8 @@ jar {
 
 jar.finalizedBy('reobfJar')
 
+compileKotlin.enabled = false
+
 tasks.withType(Checkstyle) {
     reports {
         xml.required = false
