--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -1,7 +1,7 @@
 name: Bug Report
 description: Report bugs and problems
 labels: ["bug", "needs review"]
-projects: ["IntelligenceModding/2"]
+projects: "IntelligenceModding/2"
 body:
   - type: markdown
     attributes:
