Clean and fix runGameTestClient task

--- a/build.gradle
+++ b/build.gradle
@@ -184,15 +184,6 @@ minecraft {
             }
         }
 
-        // internal run config to automatically run the client-side gametests with the runGameTestClient task
-        runGameTestClientInternal {
-            parent runs.testClient
-
-            lazyToken("minecraft_classpath", lazyTokens["minecraft_classpath"])
-
-            property 'advancedperipheralstest.tags', 'client'
-        }
-
         gameTestServer {
             def oldClasspath = lazyTokens["minecraft_classpath"]
             lazyToken("minecraft_classpath") {
@@ -677,6 +668,9 @@ publishing {
 }
 
 tasks.register('runGameTestClient', ClientJavaExec, { task ->
+    task.outputs.upToDateWhen { false }
+
     description "Runs client-side gametests with no mods"
-    setRunConfig(minecraft.runs.runGameTestClientInternal)
+    setRunConfig(minecraft.runs.testClient)
+    tags("client")
 })
