--- a/gradle.properties
+++ b/gradle.properties
@@ -24,7 +24,7 @@ ttoolkit_version=0.1.3
 # Mod dependencies
 cc_version=1.110.0
 curios_version=5.2.0+1.20.1
-minecolonies_version=1.20.1-1.1.472-BETA
+minecolonies_version=1.20.1-1.1.684-snapshot
 appliedenergistics_version=15.0.9-beta
 patchouli_version=1.20.1-84
 refinedstorage_version=1.12.3
@@ -40,14 +40,14 @@ appliedmekanistics_version=4842281
 
 # Mod dependencies which are needed for other mods
 # For minecolonies
-structurize_version=1.20.1-1.0.662-BETA
-multipiston_version=1.20-1.2.30-ALPHA
-blockui_version=1.20.1-0.0.101-ALPHA
-domumornamentum_version=1.20-1.0.150-BETA
+structurize_version=1.20.1-1.0.740-BETA
+multipiston_version=1.20.1-1.2.30-ALPHA
+blockui_version=1.20.1-1.0.186-beta
+domumornamentum_version=1.20.1-1.0.184-BETA
 
 # For Create
 flywheel_version=0.6.8.a-1
 
 # Mod dependencies for testing stuff(Only used in the dev environment)
-jei_version=1.20.1-forge:15.2.0.22
+jei_version=1.20.1-forge:15.3.0.4
 createadditions_version=5099752
