Some rendering utilities, playing with 3d rendering for the 3d objects for the glasses

--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -4,3 +4,4 @@ public-f net.minecraft.world.level.levelgen.structure.pools.StructureTemplatePoo
 public-f net.minecraft.world.level.levelgen.structure.pools.StructureTemplatePool f_210560_ # templates
 protected net.minecraft.world.level.ClipContext f_45686_ # collisionContext
 public net.minecraft.world.level.block.entity.BeaconBlockEntity f_58650_ # levels
+public net.minecraft.world.phys.shapes.VoxelShape m_83294_(Lnet/minecraft/core/Direction;)Lnet/minecraft/world/phys/shapes/VoxelShape; # calculateFace
